# netvid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check.h  framebuffer.cpp  framebuffer.h  linux_framebuffer.cpp  linux_framebuffer.h  net.cpp  net.h  netvid_play.cpp  netvid_record.cpp  netvid_slice.cpp  protocol.h  test.cpp  xz_play.sh  xz_record.sh  xz_slice.sh
